--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ matplotlib==3.9.2
 scikit-learn==1.5.2
 sentence-transformers==3.1.1
 requests==2.32.3
+google-generativeai==0.8.3
 streamlit-lottie==0.0.5
