--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-streamlit==1.39.0
-opencv-python-headless==4.10.0.84
-mediapipe==0.10.14
-numpy==1.26.4
-pandas==2.2.3
-Pillow==10.4.0
-matplotlib==3.9.2
-scikit-learn==1.5.2
-sentence-transformers==3.1.1
-requests==2.32.3
-google-generativeai==0.8.3
-streamlit-lottie==0.0.5
+streamlit
+opencv-python-headless
+mediapipe
+numpy
+pandas
+Pillow
+matplotlib
+scikit-learn
+sentence-transformers
+requests
+google-generativeai
+streamlit-lottie
+
