--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-opencv-python-headless==4.8.1.78
-mediapipe==0.10.8
+streamlit==1.51.0
+opencv-python-headless==4.6.0.66
+mediapipe==0.10.5
 numpy
 pandas
 Pillow
