--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 streamlit==1.51.0
-opencv-python-headless==4.6.0.66
-mediapipe==0.10.5
-numpy
-pandas
-Pillow
-sentence-transformers
-scikit-learn
-matplotlib
-pymongo
-bcrypt
-requests
-streamlit-lottie
-pyttsx3
-google-generativeai
+opencv-python-headless==4.10.0.84
+mediapipe==0.10.9
+Pillow==10.4.0
+numpy==1.26.4
+pandas==2.2.2
+matplotlib==3.9.2
+scikit-learn==1.5.2
+sentence-transformers==3.2.1
+google-generativeai==0.8.2
+pymongo==4.10.1
+bcrypt==4.2.0
+streamlit-lottie==0.0.5
+requests==2.32.3
+pyttsx3==2.90
+protobuf==4.25.3
