--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-opencv-python-headless
+opencv-python-headless==4.10.0.84
 mediapipe
 numpy
 pandas
@@ -14,3 +14,4 @@ bcrypt
 pyttsx3
 google-generativeai
 protobuf==3.20.*
+
